--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.0",
-    "sanitize-html": "^2.9.0"
+    "react-select": "^5.7.0",
+    "sanitize-html": "^2.9.0",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
